<resources>
    <string name="personnel_list">赵旭阳\n田玉峰\n王兴栋\n徐永泽\n路承儒\n郭振磊\n宋岳松\n刘梅\n\t —制作人员名单</string>
    <string name="app_name">MyTableTimerForJava</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_更多功能">更多功能</string>
    <string name="title_课程表主页">课程表主页</string>
    <string name="background_image_desc">back_image_home_1</string>
    <string name="course_name">课程名称</string>
    <string name="set_time">请设置时间 默认2:00 - 4:00</string>
    <string name="choose_time">选择时间</string>
    <string name="ClassRoom">教室</string>
    <string name="add_course">添加课程</string>
    <string name="skip">跳过</string>
    <string name="title_关于">关于</string>
    <string name="广告">广告位出租！！</string>
    <string name="text_赵旭阳">赵旭阳41</string>
    <string name="text_王兴栋">王兴栋32！</string>
    <string name="text_徐永泽">徐永泽37</string>
    <string name="text_1">1</string>
    <string name="text_2">2</string>
    <string name="text_3">3</string>
    <string name="text_4">4</string>
    <string name="text_路承儒">路承儒16</string>
    <string name="主题">主题</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>