<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mytabeltimerforjava.ui.home.HomeFragment"
        android:label="@string/title_课程表主页"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_aboutInfo"
        android:name="com.example.mytabeltimerforjava.ui.aboutinfo.AboutInfoFragment"
        android:label="@string/title_关于"
        tools:layout="@layout/fragment_about_infos" />

    <fragment
        android:id="@+id/navigation_choose_style"
        android:name="com.example.mytabeltimerforjava.ui.chooseStyle.ChooseStyle"
        android:label="@string/主题"
        tools:layout="@layout/fragment_choose_style" />

    <fragment
        android:id="@+id/navigation_moreFunc"
        android:name="com.example.mytabeltimerforjava.ui.morefunc.MoreFuncFragment"
        android:label="@string/title_更多功能"
        tools:layout="@layout/fragment_more_func" />


</navigation>